--- a/servelet-demo/WebContent/index.html
+++ b/servelet-demo/WebContent/index.html
@@ -2,15 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>model 登录</title>
+    <title>servlet 的学习之旅</title>
 </head>
 <body>
-<form action="login" method="GET">
-    姓名：<input type="text" name="name">
-    <br />
-    密码：<input type="text" name="password" />
-    <br />
-    <input type="submit" value="提交" />
-</form>
+<h1>servlet 的大门已经打开！！！</h1>
+
 </body>
 </html>
